--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://p.typekit.net/p.css?s=1&k=wcm3xbu&ht=tk&f=45545&a=14935757&app=typekit&e=css");
+
+@font-face {
+  font-family:"allotrope";
+  src:url("https://use.typekit.net/af/172df8/00000000000000007735c53d/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("woff2"),
+      url("https://use.typekit.net/af/172df8/00000000000000007735c53d/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("woff"),
+      url("https://use.typekit.net/af/172df8/00000000000000007735c53d/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("opentype");
+  font-display:auto;
+  font-style:normal;
+  font-weight:600;
+  font-stretch:normal;
+}
 
 body {
   margin: 0;
