--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,15 @@ mark {
   padding: 0 2px;
   border-radius: 2px;
 }
+
+/* Add these styles to your existing CSS */
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+td, th {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
